@startuml

title __SERVICE's Class Diagram__\n

  namespace edu.pfe.staffing {
    namespace service {
      class edu.pfe.staffing.service.AssignmentService {
          + getAssignmentById()
          + updateAssignment()
      }
    }
  }
  

  namespace edu.pfe.staffing {
    namespace service {
      class edu.pfe.staffing.service.AuthenticationService {
          - authenticationManager : AuthenticationManager
          + authenticate()
      }
    }
  }
  

  namespace edu.pfe.staffing {
    namespace service {
      class edu.pfe.staffing.service.PlanningService {
          + AddAssignmentToPlanning()
          + createPlanning()
          + deleteAssignmentById()
      }
    }
  }
  

  namespace edu.pfe.staffing {
    namespace service {
      class edu.pfe.staffing.service.ProjectService {
          + addProject()
          + deleteProject()
          + getAllProjects()
          + getById()
          + updateProject()
      }
    }
  }
  

  namespace edu.pfe.staffing {
    namespace service {
      class edu.pfe.staffing.service.RoleService {
          + FindRoleByName()
          + createRole()
      }
    }
  }
  

  namespace edu.pfe.staffing {
    namespace service {
      class edu.pfe.staffing.service.TeamService {
          + Updateteam()
          + Viewallteams()
          + Viewteamsid()
          + createTeam()
          + deleteAll()
          + deleteteamid()
          + findById()
      }
    }
  }
  

  namespace edu.pfe.staffing {
    namespace service {
      class edu.pfe.staffing.service.UserService {
          ~ bCryptPasswordEncoder : PasswordEncoder
          + UpdateUser()
          + findUserById()
          + findUserByMatcle()
          + findUserBySpeciality()
          + getAllUsers()
          + login()
          + register()
          + updateAllUsers()
      }
    }
  }
  

  edu.pfe.staffing.service.AssignmentService o-- edu.pfe.staffing.repository.AssignmentRepository : assignmentRepository
  edu.pfe.staffing.service.PlanningService o-- edu.pfe.staffing.repository.AssignmentRepository : assignmentRepository
  edu.pfe.staffing.service.PlanningService o-- edu.pfe.staffing.repository.PlanningRepository : planningRepository
  edu.pfe.staffing.service.PlanningService o-- edu.pfe.staffing.service.ProjectService : projectService
  edu.pfe.staffing.service.ProjectService o-- edu.pfe.staffing.repository.ProjectRepository : projectRepository
  edu.pfe.staffing.service.RoleService o-- edu.pfe.staffing.repository.RoleRepository : roleRepository
  edu.pfe.staffing.service.TeamService o-- edu.pfe.staffing.repository.TeamRepository : teamRepository
  edu.pfe.staffing.service.UserService o-- edu.pfe.staffing.configuration.MainConfiguration : mainConfiguration
  edu.pfe.staffing.service.UserService o-- edu.pfe.staffing.repository.PlanningRepository : planningRepository
  edu.pfe.staffing.service.UserService o-- edu.pfe.staffing.repository.RoleRepository : roleRepository
  edu.pfe.staffing.service.UserService o-- edu.pfe.staffing.repository.UserRepository : userRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
